--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Namitha V Acharya
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Dedicated technology enthusiast with a passion for data science, machine learning, and software development.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
